# bad-reader

./: .gitignore  Cargo.toml  README.md
resources/css/: app.css
resources/ui/: overlay.ui  reader.ui  reader.ui~  settings_dialog.ui
src/: main.rs
src/app/: database.rs  error.rs  globals.rs  mod.rs  settings.rs  utils.rs  window_state.rs
src/appop/: messages.rs  mod.rs  settings.rs
src/ui/: about_dialog.rs  file_chooser_dialog.rs  mod.rs  page_dialog.rs  settings_dialog.rs
